--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ TRACE_MEDIA_SALT=YOUR_TRACE_MEDIA_SALT
 TRACE_API_SALT=YOUR_TRACE_API_SALT
 TRACE_API_SECRET=YOUR_TRACE_API_SECRET
 MARIADB_ROOT_PASSWORD=YOUR_MARIADB_ROOT_PASSWORD
+
+AWS_BUCKET=
+AWS_ENDPOINT_URL=
+AWS_REGION=
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
