Add NEXT_PUBLIC_ANILIST_ENDPOINT to www env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - NEXT_PUBLIC_API_ENDPOINT=${NEXT_PUBLIC_API_ENDPOINT}
       - NEXT_PUBLIC_MEDIA_ENDPOINT=${NEXT_PUBLIC_MEDIA_ENDPOINT}
+      - NEXT_PUBLIC_ANILIST_ENDPOINT=${NEXT_PUBLIC_ANILIST_ENDPOINT}
     ports:
       - ${WWW_PORT}:3000
     networks:
