Use bind mount to persist mariadb data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,10 @@ services:
     restart: unless-stopped
     environment:
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
+    volumes:
+      - type: bind
+        source: /host/dir
+        target: /var/lib/mysql
     networks:
       trace_moe_net:
 
