--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
     volumes:
       - type: bind
-        source: /host/dir
+        source: ${MYSQL_DIR}
         target: /var/lib/mysql
     networks:
       trace_moe_net:
