Adopt Milvus docker compose to boost search

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ API_PORT=3311
 MEDIA_PORT=3312
 ADMINER_PORT=3313
 SOLR_PORT=8983
+MILVUS_PORT=19530
+SEARCHER_PORT=19531
 
 NEXT_PUBLIC_API_ENDPOINT=http://172.17.0.1:3311    # external URL
 NEXT_PUBLIC_MEDIA_ENDPOINT=http://172.17.0.1:3312  # external URL
