--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.5"
 
 services:
   www:
@@ -58,6 +58,7 @@ services:
       - TRACE_MEDIA_SALT=${TRACE_MEDIA_SALT}
       - TRACE_API_SECRET=${TRACE_API_SECRET}
       - HASH_PATH=/mnt/hash
+      - SEARCHER_URL=http://172.17.0.1:${SEARCHER_PORT}
     ports:
       - ${API_PORT}:3000
     volumes:
@@ -138,6 +139,7 @@ services:
       - TRACE_API_URL=http://172.17.0.1:${API_PORT}
       - TRACE_API_SECRET=${TRACE_API_SECRET}
       - TRACE_MEDIA_URL=http://172.17.0.1:${MEDIA_PORT}
+      - MILVUS_URL=172.17.0.1:${MILVUS_PORT}
     networks:
       trace_moe_net:
 
@@ -154,6 +156,81 @@ services:
       - type: bind
         source: ${WATCH_DIR}
         target: /mnt/
+    networks:
+      trace_moe_net:
+
+
+  searcher:
+    image: ghcr.io/leslie-wong-h/trace.moe-worker-searcher:latest
+    restart: unless-stopped
+    ports:
+      - ${SEARCHER_PORT}:19531
+    environment:
+      - TRACE_ALGO=cl
+      - SOLA_SOLR_LIST=http://172.17.0.1:${SOLR_PORT}/solr/
+      - SEARCHER_URL=http://172.17.0.1:${SEARCHER_PORT}
+      - MILVUS_URL=172.17.0.1:${MILVUS_PORT}
+    networks:
+      trace_moe_net:
+
+
+  etcd:
+    container_name: milvus-etcd
+    image: quay.io/coreos/etcd:v3.5.0
+    restart: unless-stopped
+    environment:
+      - ETCD_AUTO_COMPACTION_MODE=revision
+      - ETCD_AUTO_COMPACTION_RETENTION=1000
+      - ETCD_QUOTA_BACKEND_BYTES=4294967296
+    volumes:
+      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/etcd:/etcd
+    command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    networks:
+      trace_moe_net:
+
+
+  minio:
+    container_name: milvus-minio
+    image: minio/minio:RELEASE.2022-03-17T06-34-49Z
+    restart: unless-stopped
+    environment:
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
+    volumes:
+      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
+    command: minio server /minio_data
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "curl",
+          "-f",
+          "http://localhost:9000/minio/health/live"
+        ]
+      interval: 30s
+      timeout: 20s
+      retries: 3
+    networks:
+      trace_moe_net:
+
+
+  standalone:
+    container_name: milvus-standalone
+    image: milvusdb/milvus:v2.1.1
+    restart: unless-stopped
+    command: [ "milvus", "run", "standalone" ]
+    environment:
+      ETCD_ENDPOINTS: etcd:2379
+      MINIO_ADDRESS: minio:9000
+    volumes:
+      - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/milvus:/var/lib/milvus
+      - ${DOCKER_VOLUME_DIRECTORY:-.}/milvus.yaml:/milvus/configs/milvus.yaml
+    ports:
+      - "19530:19530"
+      - "9091:9091"
+    depends_on:
+      - "etcd"
+      - "minio"
     networks:
       trace_moe_net:
 
