--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,15 +190,19 @@ services:
 
 
   minio:
+    # Remote Minio Gateway
     container_name: milvus-minio
     image: minio/minio:RELEASE.2022-03-17T06-34-49Z
     restart: unless-stopped
     environment:
-      MINIO_ACCESS_KEY: minioadmin
-      MINIO_SECRET_KEY: minioadmin
+      - MINIO_ROOT_USER=${AWS_ACCESS_KEY}
+      - MINIO_ROOT_PASSWORD=${AWS_SECRET_KEY}
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
-    command: minio server /minio_data
+    command: minio gateway s3 ${AWS_ENDPOINT_URL} --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
     healthcheck:
       test:
         [
