Keep minio gateway persistence with etcd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -185,6 +185,8 @@ services:
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    ports:
+      - "2379:2379"    
     networks:
       trace_moe_net:
 
@@ -197,12 +199,15 @@ services:
     environment:
       - MINIO_ROOT_USER=${AWS_ACCESS_KEY}
       - MINIO_ROOT_PASSWORD=${AWS_SECRET_KEY}
+      - MINIO_ETCD_ENDPOINTS=http://172.17.0.1:2379
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
     command: minio gateway s3 ${AWS_ENDPOINT_URL} --console-address ":9001"
     ports:
       - "9000:9000"
       - "9001:9001"
+    depends_on:
+      - "etcd"
     healthcheck:
       test:
         [
