--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -192,22 +192,15 @@ services:
 
 
   minio:
-    # Remote Minio Gateway
+    # Local Minio Server
     container_name: milvus-minio
     image: minio/minio:RELEASE.2022-03-17T06-34-49Z
-    restart: unless-stopped
     environment:
-      - MINIO_ROOT_USER=${AWS_ACCESS_KEY}
-      - MINIO_ROOT_PASSWORD=${AWS_SECRET_KEY}
-      - MINIO_ETCD_ENDPOINTS=http://172.17.0.1:2379
+      MINIO_ACCESS_KEY: minioadmin
+      MINIO_SECRET_KEY: minioadmin
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
-    command: minio gateway s3 ${AWS_ENDPOINT_URL} --console-address ":9001"
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    depends_on:
-      - "etcd"
+    command: minio server /minio_data
     healthcheck:
       test:
         [
@@ -219,9 +212,37 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
-    networks:
-      trace_moe_net:
 
+  # minio:
+  #   # Remote Minio Gateway
+  #   container_name: milvus-minio
+  #   image: minio/minio:RELEASE.2022-03-17T06-34-49Z
+  #   restart: unless-stopped
+  #   environment:
+  #     - MINIO_ROOT_USER=${AWS_ACCESS_KEY}
+  #     - MINIO_ROOT_PASSWORD=${AWS_SECRET_KEY}
+  #     - MINIO_ETCD_ENDPOINTS=http://172.17.0.1:2379
+  #   volumes:
+  #     - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/minio:/minio_data
+  #   command: minio gateway s3 ${AWS_ENDPOINT_URL} --console-address ":9001"
+  #   ports:
+  #     - "9000:9000"
+  #     - "9001:9001"
+  #   depends_on:
+  #     - "etcd"
+  #   healthcheck:
+  #     test:
+  #       [
+  #         "CMD",
+  #         "curl",
+  #         "-f",
+  #         "http://localhost:9000/minio/health/live"
+  #       ]
+  #     interval: 30s
+  #     timeout: 20s
+  #     retries: 3
+  #   networks:
+  #     trace_moe_net:
 
   standalone:
     container_name: milvus-standalone
