--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -212,6 +212,9 @@ services:
       interval: 30s
       timeout: 20s
       retries: 3
+    networks:
+      trace_moe_net:
+
 
   # minio:
   #   # Remote Minio Gateway
