--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,12 @@ WWW_PORT=3310
 API_PORT=3311
 MEDIA_PORT=3312
 ADMINER_PORT=3313
+MONGOBOT_PORT=3314
+MONGOEXPRESS_PORT=3315
 SOLR_PORT=8983
 MILVUS_PORT=19530
 SEARCHER_PORT=19531
+MONGO_PORT=27017
 
 NEXT_PUBLIC_API_ENDPOINT=http://172.17.0.1:3311    # external URL
 NEXT_PUBLIC_MEDIA_ENDPOINT=http://172.17.0.1:3312  # external URL
@@ -14,12 +17,16 @@ WATCH_DIR=/home/soruly/trace.moe-incoming/  # suggest using fast drives
 MEDIA_DIR=/home/soruly/trace.moe-media/     # suggest using large drives
 HASH_DIR=/home/soruly/trace.moe-hash/       # suggest using fast drives
 SOLR_DIR=/home/soruly/mycores               # suggest using super fast drives
-MYSQL_DIR=/home/soruly/mysql 
+MYSQL_DIR=/home/soruly/mysql
+MONGO_DIR=/home/soruly/mongo
 
 TRACE_MEDIA_SALT=YOUR_TRACE_MEDIA_SALT
 TRACE_API_SALT=YOUR_TRACE_API_SALT
 TRACE_API_SECRET=YOUR_TRACE_API_SECRET
 MARIADB_ROOT_PASSWORD=YOUR_MARIADB_ROOT_PASSWORD
+MONGODB_ROOT_PASSWORD=YOUR_MONGODB_ROOT_PASSWORD
+
+MONGODB_URL=mongodb://root:YOUR_MONGODB_ROOT_PASSWORD@mongo:27017
 
 AWS_BUCKET=
 AWS_ENDPOINT_URL=
