Add AWS_HLS_URL env

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ MONGODB_URL=mongodb://root:YOUR_MONGODB_ROOT_PASSWORD@mongo:27017
 
 AWS_BUCKET=
 AWS_ENDPOINT_URL=
+AWS_HLS_URL=
 AWS_REGION=
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
