--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - TRACE_API_SECRET=${TRACE_API_SECRET}
       - AWS_BUCKET=${AWS_BUCKET}
       - AWS_ENDPOINT_URL=${AWS_ENDPOINT_URL}
+      - AWS_HLS_URL=${AWS_HLS_URL}
       - AWS_REGION=${AWS_REGION}
       - AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
       - AWS_SECRET_KEY=${AWS_SECRET_KEY}
