Add etcd ports back

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,6 +232,8 @@ services:
     volumes:
       - ${DOCKER_VOLUME_DIRECTORY:-.}/volumes/etcd:/etcd
     command: etcd -advertise-client-urls=http://127.0.0.1:2379 -listen-client-urls http://0.0.0.0:2379 --data-dir /etcd
+    ports:
+      - "2379:2379"
     networks:
       trace_moe_net:
 
