--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ MONGOEXPRESS_PORT=3315
 SOLR_PORT=8983
 MILVUS_PORT=19530
 SEARCHER_PORT=19531
+REARRANGER_PORT=19532
 MONGO_PORT=27017
 
 NEXT_PUBLIC_API_ENDPOINT=http://172.17.0.1:3311    # external URL
