--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,7 @@ services:
       - TRACE_API_SECRET=${TRACE_API_SECRET}
       - HASH_PATH=/mnt/hash
       - SEARCHER_URL=http://172.17.0.1:${SEARCHER_PORT}
+      - REARRANGER_URL=http://172.17.0.1:${REARRANGER_PORT}
       - MILVUS_URL=172.17.0.1:${MILVUS_PORT}
     ports:
       - ${API_PORT}:3000
@@ -220,6 +221,15 @@ services:
       - SOLA_SOLR_LIST=http://172.17.0.1:${SOLR_PORT}/solr/
       - SEARCHER_URL=http://172.17.0.1:${SEARCHER_PORT}
       - MILVUS_URL=172.17.0.1:${MILVUS_PORT}
+    networks:
+      trace_moe_net:
+
+
+  rearranger:
+    image: lesliewong007/trace.moe-rearranger:latest
+    restart: unless-stopped
+    ports:
+      - ${REARRANGER_PORT}:19532
     networks:
       trace_moe_net:
 
