Update minio info

--- a/.env.example
+++ b/.env.example
@@ -30,11 +30,11 @@ MONGODB_ROOT_PASSWORD=YOUR_MONGODB_ROOT_PASSWORD
 MONGODB_URL=mongodb://root:YOUR_MONGODB_ROOT_PASSWORD@mongo:27017
 
 AWS_BUCKET=
-AWS_ENDPOINT_URL=
+AWS_ENDPOINT_URL=http://minio:9000
 AWS_HLS_URL=
-AWS_REGION=
-AWS_ACCESS_KEY=
-AWS_SECRET_KEY=
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY=minioadmin
+AWS_SECRET_KEY=minioadmin
 
 wechatAppId=
 wechatSecret=
